[Archana] Fixed CoverSheet header to fall in a single line

--- a/src/scss/coversheet.scss
+++ b/src/scss/coversheet.scss
@@ -87,7 +87,7 @@
 }
 .header{
     font-weight: 600;
-    font-size: 4mm;
+    font-size: 3.9mm;
     margin-bottom: 8mm;
 }
 
